# myrientDL

./: .gitignore  README.md  pyproject.toml
api/: .env.example  README.md  database.py  main.py  pyproject.toml  render.yaml  services.py
backend/: __init__.py  main.py  models.py  services.py
cli/: __init__.py  cli.py  pyproject.toml
frontend/: .env.local.example  README.md  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: GameList.tsx
frontend/lib/api/: client.ts  queries.ts  types.ts
frontend/lib/hooks/: useCollections.ts  useGames.ts  useStats.ts
myrientDL/: __init__.py  cli.py  config.py  crawler.py  database.py  downloader.py  models.py  pyproject.toml  search.py  verification.py
tests/: __init__.py  test_crawler.py  test_integration.py
