[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrient-dl"
version = "0.1.0"
description = "A polite, resumable downloader client for Myrient game archive"
authors = [{name = "User", email = "user@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "aiosqlite>=0.19.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "ruamel.yaml>=0.17.0",
    "selectolax>=0.3.17",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.21.0",
    "anyio>=4.0.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
myrient-dl = "myrientDL.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["myrientDL*"]