[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myrientdl-api"
version = "0.1.0"
description = "FastAPI backend for MyrientDL web application"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0"
authors = [
    {name = "Jordan Mitacek"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "selectolax>=0.3.24",
    "aiofiles>=24.1.0",
    "anyio>=4.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
