[project]
name = "myrientdl-api"
version = "0.1.0"
description = "FastAPI backend for MyrientDL web application"
requires-python = ">=3.9"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.2",
    "python-dotenv>=1.0.1",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.2",
    "selectolax>=0.3.24",
    "aiofiles>=24.1.0",
    "anyio>=4.6.0",
]
